--- a/map.html
+++ b/map.html
@@ -3,11 +3,11 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Boost C++ Libraries</title>
+  <title>Boost C++ Libraries, Index</title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
-  <link rel="stylesheet" type="text/css" href="/style/section-support.css" />
-  <!--[if IE]> <style type="text/css"> body { behavior: url(../style/csshover.htc); } </style> <![endif]-->
+  <link rel="stylesheet" type="text/css" href="style/section-map.css" />
+  <!--[if IE]> <style type="text/css"> body { behavior: url(style/csshover.htc); } </style> <![endif]-->
 </head>
 
 <body>
@@ -21,19 +21,37 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>Boost C++ Libraries</h1>
+              <h1>Index</h1>
             </div>
 
             <div class="section-body">
-              <p>{stuff}</p>
+              <div id="site-map">
+                <ul>
+                  <li id="site-map-section-boost">
+                  <!--#include virtual="/common/menu-boost.html" --></li>
+
+                  <li id="site-map-section-community">
+                  <!--#include virtual="/common/menu-community.html" --></li>
+
+                  <li id="site-map-section-wiki">
+                  <!--#include virtual="/common/menu-wiki.html" --></li>
+
+                  <li id="site-map-section-development">
+                  <!--#include virtual="/common/menu-development.html" --></li>
+
+                  <li id="site-map-section-support">
+                  <!--#include virtual="/common/menu-support.html" --></li>
+                </ul>
+              </div>
             </div>
+
+            <div class="clear"></div>
           </div>
         </div>
       </div>
 
       <div id="sidebar">
         <!--#include virtual="/common/sidebar-search.html" -->
-        <!--#include virtual="/common/sidebar-support.html" -->
       </div>
 
       <div class="clear"></div>
