--- a/common/sidebar-search.html
+++ b/common/sidebar-search.html
@@ -1,16 +1,15 @@
   <div id="search">
     <div id="search-0">
       <form method="get" action="http://www.google.com/custom">
-        <input type="hidden" name="cof" value=
+        <h4><input type="hidden" name="cof" value=
         "LW:277;L:http://www.boost.org/boost.png;LH:86;AH:center;GL:0;S:http://www.boost.org;AWFID:9b83d16ce652ed5a;" />
          <input type="hidden" name="sa" value="Google Search" /> <input type=
         "hidden" name="domains" value="www.boost.org;lists.boost.org" />
         <input type="hidden" name="hq" value=
-        "site:www.boost.org OR site:lists.boost.org" />
-
-        <h4><span id="search-label">Search</span> <span id=
-        "search-text"><input type="text" name="q" id="q" size="10" maxlength=
-        "255" alt="Search Text" /></span></h4>
+        "site:www.boost.org OR site:lists.boost.org" /> <span id=
+        "search-label">Search</span> <span id="search-text"><input type=
+        "text" name="q" id="q" size="10" maxlength="255" alt=
+        "Search Text" /></span></h4>
       </form>
     </div>
 
