--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -237,7 +237,7 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --doctype strict <i>fname</i>
   <div id="footer">
     <div id="footer-left">
       <div id="revised">
-        <p>Revised $Date$</p>
+        <p>Revised $Date: 2007-05-01 16:02:03 -0400 (Tue, 01 May 2007) $</p>
       </div>
 
       <div id="copyright">
