--- a/common/menu-community.html
+++ b/common/menu-community.html
@@ -29,4 +29,13 @@
 
     <li><a href="http://www.boost-consulting.com/vault/" class=
     "external">Vault <span class="link">&gt;</span></a></li>
+
+    <li>
+      <a href="/community/irc.html">IRC <span class="link">&gt;</span></a>
+
+      <ul>
+        <li><a href="/community/irc_stats_ibd.php">IDB Stats <span class=
+        "link">&gt;</span></a></li>
+      </ul>
+    </li>
   </ul>
