I forgot to run tidy before comitting.
[SVN r40755]

--- a/development/int_const_guidelines.html
+++ b/development/int_const_guidelines.html
@@ -51,7 +51,8 @@
               following:</p>
 
               <ol>
-                <li>A literal integral value, for example <code>0u</code> or <code>3L</code>.</li>
+                <li>A literal integral value, for example <code>0u</code> or
+                <code>3L</code>.</li>
 
                 <li>An enumerator value.</li>
 
@@ -194,8 +195,8 @@ struct myclass
               expression unless the name is fully qualified (which is to say
               it starts with <code>::</code>).</p>
 
-              <p><b><i>Always leave a space after a '<code>&lt;</code>' and before
-             '<code>::</code>'</i></b></p>
+              <p><b><i>Always leave a space after a '<code>&lt;</code>' and
+              before '<code>::</code>'</i></b></p>
 
               <p>For example:</p>
               <pre>
@@ -204,8 +205,9 @@ struct myclass
                 ensure there is space here!
 </pre>
 
-              <p>Rationale: <code>&lt;:</code> is a legal digraph in it's own right, so
-              <code>&lt;::</code> is interpreted as the same as <code>[:</code>.</p>
+              <p>Rationale: <code>&lt;:</code> is a legal digraph in it's own
+              right, so <code>&lt;::</code> is interpreted as the same as
+              <code>[:</code>.</p>
 
               <p><b><i>Don't use local names as integral constant
               expressions</i></b></p>
