--- a/common/menu-development.html
+++ b/common/menu-development.html
@@ -26,6 +26,13 @@
     <li><a href="/development/requirements.html">Requirements and Guidelines
     <span class="link">&gt;</span></a></li>
 
+    <li style="list-style: none; display: inline">
+      <ul>
+        <li><a href="/development/int_const_guidelines.html">Coding
+        Guidelines for Integral Constant Expressions</a></li>
+      </ul>
+    </li>
+
     <li><a href="/development/submissions.html">Submissions <span class=
     "link">&gt;</span></a></li>
 
