--- a/common/menu-support.html
+++ b/common/menu-support.html
@@ -2,9 +2,12 @@
   "link">&gt;</span></a></h4>
 
   <ul>
-    <li><a href="/support/participation.html" class="internal">Participation <span class=
-    "link">&gt;</span></a></li>
+    <li><a href="/support/participation.html" class="internal">Participation
+    <span class="link">&gt;</span></a></li>
 
     <li><a href="/support/groups.html" class="internal">Groups <span class=
+    "link">&gt;</span></a></li>
+
+    <li><a href="/support/bugs.html" class="internal">Bugs<span class=
     "link">&gt;</span></a></li>
   </ul>
