Add google summer of code section, with a stub introduction page and the 2006 overview from trunk. Refs #1255.
[SVN r40815]

--- a/common/menu-community.html
+++ b/common/menu-community.html
@@ -43,4 +43,14 @@
         <span class="link">&gt;</span></a></li>
       </ul>
     </li>
+
+    <li>
+      <a href="/community/gsoc.html">Google Summer of Code <span class=
+      "link">&gt;</span></a>
+
+      <ul>
+        <li><a href="/community/gsoc_2006_boost_overview.html">2006 Overview
+        <span class="link">&gt;</span></a></li>
+      </ul>
+    </li>
   </ul>
