--- a/community/error_handling.html
+++ b/community/error_handling.html
@@ -148,7 +148,7 @@ throw some_exception();
                 <i>user</i>-comprehensible error message at the point an
                 exception is thrown. Certainly, internationalization is
                 beyond the scope of the exception class author. <a href=
-                "../people/peter_dimov.htm">Peter Dimov</a> makes an
+                "/users/people/.html">Peter Dimov</a> makes an
                 excellent argument that the proper use of a
                 <code>what()</code> string is to serve as a key into a table
                 of error message formatters. Now if only we could get
