Fix a lot links. Mainly links to the 'libs' directory in release (which isn't up yet).
[SVN r41456]

--- a/community/counted_body.html
+++ b/community/counted_body.html
@@ -120,7 +120,7 @@
               increasing use of templates this is often the favourite, and is
               the principle behind the common - but not standard -
               <code>counted_ptr</code>. <i>[The Boost name is <a href=
-              "../libs/smart_ptr/shared_ptr.htm"><code>shared_ptr</code></a>
+              "/doc/libs/release/libs/smart_ptr/shared_ptr.htm"><code>shared_ptr</code></a>
               rather than <code>counted_ptr</code>.]</i></p>
 
               <p>A common implementation of COUNTED BODY is to provide the
