--- a/community/implementation_variations.html
+++ b/community/implementation_variations.html
@@ -56,8 +56,8 @@
               memory.</p>
 
               <p>Boost libraries generally use a <a href=
-              "../libs/config/config.htm">configuration header</a>,
-              boost/config.hpp, to capture compiler and platform
+              "/doc/libs/release/libs/config/config.htm">configuration
+              header</a>, boost/config.hpp, to capture compiler and platform
               dependencies. Although the use of boost/config.hpp is not
               required, it is the preferred approach for simple configuration
               problems.</p>
