--- a/community/generic_programming.html
+++ b/community/generic_programming.html
@@ -325,9 +325,10 @@ namespace std {
 
               <p><strong>Note:</strong> The <i>type generator</i> concept has
               largely been superseded by the more refined notion of a
-              <a href="../libs/mpl/doc/refmanual/metafunction.html"><i>metafunction</i></a>.
-              See <i><a href="http://www.boost-consulting.com/mplbook">C++
-              Template Metaprogramming</a></i> for an in-depth discussion of
+              <a href="/doc/libs/release/libs/mpl/doc/refmanual/metafunction.html">
+              <i>metafunction</i></a>. See <i><a href=
+              "http://www.boost-consulting.com/mplbook">C++ Template
+              Metaprogramming</a></i> for an in-depth discussion of
               metafunctions.</p>
 
               <p>A <i>type generator</i> is a template whose only purpose is
@@ -337,11 +338,11 @@ namespace std {
               <code>type</code>. A type generator is usually used to
               consolidate a complicated type expression into a simple one.
               This example uses an old version of <a href=
-              "../libs/iterator/doc/iterator_adaptor.html"><code>iterator_adaptor</code></a>
-              whose design didn't allow derived iterator types. As a result,
-              every adapted iterator had to be a specialization of
-              <code>iterator_adaptor</code> itself and generators were a
-              convenient way to produce those types.</p>
+              "/doc/libs/release/libs/iterator/doc/iterator_adaptor.html"><code>
+              iterator_adaptor</code></a> whose design didn't allow derived
+              iterator types. As a result, every adapted iterator had to be a
+              specialization of <code>iterator_adaptor</code> itself and
+              generators were a convenient way to produce those types.</p>
               <pre>
 template &lt;class Predicate, class Iterator, 
     class Value = <i>complicated default</i>,
@@ -451,9 +452,9 @@ void tweak_all_widgets2(int arg)
               practice, though. <a href=
               "http://cvs.sourceforge.net/viewcvs.py/*checkout*/boost/boost/libs/utility/Attic/iterator_adaptors.pdf">
               This paper</a> describes an old version of <a href=
-              "../libs/iterator/doc/iterator_adaptor.html"><code>iterator_adaptor</code></a>
-              that used non-orthogonal policies. There is also precedent in
-              the standard library: <a href=
+              "/doc/libs/release/libs/iterator/doc/iterator_adaptor.html"><code>
+              iterator_adaptor</code></a> that used non-orthogonal policies.
+              There is also precedent in the standard library: <a href=
               "http://www.dinkumware.com/htm_cpl/string2.html#char_traits"><code>
               std::char_traits</code></a>, despite its name, acts as a
               policies class that determines the behaviors of <a href=
