--- a/development/test.html
+++ b/development/test.html
@@ -84,19 +84,19 @@
 
               <h3>Optional (but highly recommended)</h3>
 
-              <p>The <a href="../libs/test/index.html">Boost Test Library</a>
-              provides many useful components which ease the construction of
-              test programs.</p>
+              <p>The <a href="/doc/libs/release/libs/test/index.html">Boost
+              Test Library</a> provides many useful components which ease the
+              construction of test programs.</p>
 
               <ul>
                 <li>Use the library's <a href=
-                "../libs/test/doc/components/test_tools/index.html">Test
-                Tools</a> for the construction of simple test programs that
-                do not need much structure.</li>
+                "/doc/libs/release/libs/test/doc/components/test_tools/index.html">
+                Test Tools</a> for the construction of simple test programs
+                that do not need much structure.</li>
 
                 <li>Use the library's <a href=
-                "../libs/test/doc/components/utf/index.html">Unit Test
-                Framework</a> for the construction of more complex test
+                "/doc/libs/release/libs/test/doc/components/utf/index.html">Unit
+                Test Framework</a> for the construction of more complex test
                 programs that need to be structured into individual tests and
                 test suites.</li>
               </ul>
