--- a/common/menu-doc.html
+++ b/common/menu-doc.html
@@ -6,7 +6,10 @@
       <a href="/doc/libs">Libraries <span class="link">&gt;</span></a>
 
       <ul>
-        <li><a href="/doc/libs/1_34_0">1.34.0 - Current Release <span class=
+        <li><a href="/doc/libs/1_34_0">1.34.1 - Current Release <span class=
+        "link">&gt;</span></a></li>
+
+        <li><a href="/doc/libs/1_34_0">1.34.0 <span class=
         "link">&gt;</span></a></li>
 
         <li><a href="/doc/libs/1_33_1">1.33.1 <span class=
@@ -19,32 +22,4 @@
         "link">&gt;</span></a></li>
       </ul>
     </li>
-<!--
-    <li>
-      <a href="/doc/wiki">Wiki <span class="link">&gt;</span></a>
-
-      <ul>
-        <li><a href="/doc/wiki/RecentChanges">Recent Changes <span class=
-        "link">&gt;</span></a></li>
-
-        <li><a href="/doc/wiki/?action=editprefs">Preferences <span class=
-        "link">&gt;</span></a></li>
-
-        <li><a href="/doc/wiki/?action=index">Page List <span class=
-        "link">&gt;</span></a></li>
-
-        <li><a href="/doc/wiki/?action=links">Links List <span class=
-        "link">&gt;</span></a></li>
-
-        <li id="wiki-edit"><a href="?action=edit">Edit <span class=
-        "link">&gt;</span></a></li>
-
-        <li id="wiki-history"><a href="?action=history">History <span class=
-        "link">&gt;</span></a></li>
-      </ul>
-    </li>
-
-    <li><a href="/common/code/webnotes/login_page.php">Webnotes Login
-    <span class="link">&gt;</span></a></li>
--->
   </ul>
