Try to reduce the number of links on the 'bad links' report a little. Many are just adding trailing slashes to avoid a 301 redirect.
[SVN r41546]

--- a/community/requests.html
+++ b/community/requests.html
@@ -68,7 +68,7 @@
 
       <div id="copyright">
         <p>&copy; Copyright <a href=
-        "/users/people/aleksey_gurtovoy.htm">Aleksey Gurtovoy</a> 2002</p>
+        "/users/people/aleksey_gurtovoy.html">Aleksey Gurtovoy</a> 2002</p>
       </div><!--#include virtual="/common/footer-license.html" -->
     </div>
 
