Fix many broken links.
[SVN r41899]

--- a/community/exception_safety.html
+++ b/community/exception_safety.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" type="text/css" href=
   "/style/section-community.css" />
   <!--[if IE]> <style type="text/css"> body { behavior: url(/style/csshover.htc); } </style> <![endif]-->
+
+  <style type="text/css">
+/*<![CDATA[*/
+  h3.c2 {text-align: center}
+  p.c1 {font-style: italic; text-align: center}
+  /*]]>*/
+  </style>
 </head>
 
 <body>
@@ -26,13 +33,12 @@
             </div>
 
             <div class="section-body">
-              <p style="text-align: center"><i><strong>Lessons Learned from
-              Specifying Exception-Safety for the C++ Standard
-              Library</strong></i></p>
+              <p class="c1"><strong>Lessons Learned from Specifying
+              Exception-Safety for the C++ Standard Library</strong></p>
 
-              <h3 style="text-align: center">David Abrahams</h3>
+              <h3 class="c2">David Abrahams</h3>
 
-              <h3 style="text-align: center"><a href=
+              <h3 class="c2"><a href=
               "mailto:david.abrahams@rcn.com">david.abrahams@rcn.com</a></h3>
 
               <p><strong>Abstract.</strong> This paper represents the
@@ -631,7 +637,7 @@ void StrongCheck(const Value&amp; v, const Operation&amp; op)
                 <li><a name="reference4" id="reference4">Tom</a> Cargill,
                 &ldquo;Exception Handling: A False Sense of Security,&rdquo;
                 C++ Report, Nov-Dec 1994, also available at <a href=
-                "http://www.awprofessional.com/content/images/020163371x/supplements/Exception_Handling_Article.html">
+                "http://www.informit.com/content/images/020163371x/supplements/Exception_Handling_Article.html">
                 http://www.awprofessional.com/content/images/020163371x/supplements/Exception_Handling_Article.html</a>.</li>
 
                 <li><a name="reference5" id="reference5">B.</a> Fomitchev,
