--- a/development/index.html
+++ b/development/index.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Boost C++ Libraries</title>
+  <title>Boost Development</title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href=
@@ -22,7 +22,7 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>Boost C++ Libraries</h1>
+              <h1>Development</h1>
             </div>
 
             <div class="section-body">
@@ -48,9 +48,7 @@
       </div>
 
       <div id="copyright">
-        <p>Copyright Beman Dawes, David Abrahams, 1998-2005.</p>
-
-        <p>Copyright Rene Rivera 2004-2005.</p>
+        <p>Copyright Rene Rivera 2007.</p>
       </div><!--#include virtual="/common/footer-license.html" -->
     </div>
 
