Fix broken sandbox links.
[SVN r42107]

--- a/community/sandbox.html
+++ b/community/sandbox.html
@@ -35,13 +35,12 @@
 
               <p>The Boost Sandbox lives at <a href=
               "https://svn.boost.org/svn/boost/sandbox">https://svn.boost.org/svn/boost/sandbox</a>
-              within the <a href=
-              "http://boost.borg.redshift-software.com/users/download/#repository">
-              Boost Subversion</a> repository. Anyone interesting in working
-              on Boost code is welcome to a sandbox developer account; see
-              the instructions on the <a class="wiki" href=
-              "/trac/boost/wiki/BoostSubversion">BoostSubversion</a> wiki
-              page.</p>
+              within the <a href="/users/download/#repository">Boost
+              Subversion</a> repository. Anyone interesting in working on
+              Boost code is welcome to a sandbox developer account; see the
+              instructions on the <a href=
+              "http://svn.boost.org/trac/boost/wiki/BoostSubversion">BoostSubversion</a>
+              wiki page.</p>
 
               <h2>Organization</h2>
 
