--- a/common/heading.html
+++ b/common/heading.html
@@ -1,3 +1,4 @@
+<div class="heading-inner">
   <div id="heading-placard"></div>
 
   <h1 id="heading-title"><a href="/"><img src="/gfx/space.png" alt=
@@ -31,3 +32,4 @@
       <li id="map-section-tab"><a href="/map.html">Index</a></li>
     </ul>
   </div>
+</div>
