Added acknowledgements to community menu
[SVN r74190]

--- a/common/menu-community.html
+++ b/common/menu-community.html
@@ -36,6 +36,9 @@
       </ul>
     </li>
 
+    <li><a href="/community/acknowledgements.html">Acknowledgements <span class=
+    "link">&gt;</span></a></li>
+
     <li><a href="/community/groups.html">Mailing Lists <span class=
     "link">&gt;</span></a></li>
 
