Endian Review Begins, Conversion review is over.
[SVN r74290]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -95,20 +95,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <td>Endian</td>
-
-                    <td>Beman Dawes</td>
-
-                    <td>
-		      <a href="http://svn.boost.org/svn/boost/sandbox/endian/">
-			Boost Sandbox</a>
-		    </td>
-                    <td>Joel Falcou</td>
-
-                    <td>September 5, 2011 - September 14, 2011</td>
-                  </tr>
-
-                  <tr>
                     <td>Sorting</td>
 
                     <td>Steven Ross</td>
@@ -272,6 +258,22 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                   <tr>
+                    <td>Endian</td>
+
+                    <td>Beman Dawes</td>
+
+                    <td>Joel Falcou</td>
+
+                    <td>September 5, 2011 - September 14, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/09/0332.php">
+			Ongoing</a>
+		    </td>
+                  </tr>
+
+                  <tr>
                     <td>Conversion</td>
 
                     <td>Vicente Botet</td>
@@ -283,7 +285,7 @@ http://www.boost.org/development/website_updating.html
 		    <td>
         	      <a href=
 		     "http://lists.boost.org/boost-announce/2011/08/0330.php">
-			Ongoing</a>
+			Pending</a>
 		    </td>
                   </tr>
 
