Website: More acknowledgements.
- Add sourceforge because we still use them for developement documentation.
- Move the testing acknowledgements to the acknowledgement page. I think
  they're a little out of date.


[SVN r74313]

--- a/community/acknowledgements.html
+++ b/community/acknowledgements.html
@@ -71,7 +71,65 @@ http://www.boost.org/development/website_updating.html
                   popular PDF versions of many Boost manuals written in
                   Quickbook, BoostBook, etc.</p>
                 </dd>
+
+                <dt>Development Documentation Hosting</dt>
+
+                <dd>
+                  <p>Thanks to sourceforge for hosting the development
+                  documentation for several libraries.</p>
+                </dd>
               </dl>
+
+              <h2 id="testing">Testing</h2>
+
+              <p>The compiler status tables have been prepared with resources
+              donated by a number of individuals, educational institutions,
+              and companies. Boost would like to thank them for their
+              support. Some of the organizations helping include:</p>
+
+              <ul class="directory">
+                <li>
+                  <p><img src="../gfx/borland_logo.gif" alt="Borland" width=
+                  "70" height="33" /><br />
+                  <a href="http://www.borland.com/">Borland</a></p>
+                </li>
+
+                <li>
+                  <p><img src="../gfx/intel_logo.gif" alt="intel" width="72"
+                  height="36" /><br />
+                  <a href="http://www.intel.com/software/products">Intel
+                  Corporation</a></p>
+                </li>
+
+                <li>
+                  <p><img src="../gfx/ms_logo.gif" alt="Microsoft" width=
+                  "113" height="35" /><br />
+                  <a href=
+                  "http://msdn.microsoft.com/visualc/">Microsoft</a></p>
+                </li>
+
+                <li>
+                  <p><a href="http://www.hp.com/">Hewlett-Packard
+                  Company</a></p>
+                </li>
+
+                <li>
+                  <p><a href="http://www.lbl.gov">Lawrence Berkeley National
+                  Laboratory</a></p>
+                </li>
+
+                <li>
+                  <p><a href="http://www.osl.iu.edu/">Open Systems
+                  Laboratory, Indiana University</a></p>
+                </li>
+              </ul>
+
+              <div class="clear"></div>
+
+              <p>Note, however, that Boost does not endorse any product or
+              service, nor does Boost guarantee that some or all of its
+              libraries work with any of the products or services mentioned
+              above.</p>
             </div>
           </div>
         </div>
