--- a/development/testing.html
+++ b/development/testing.html
@@ -90,8 +90,7 @@ http://www.boost.org/development/website_updating.html
                   <td><a href=
                   "tests/release/developer/issues.html">Unresolved
                   Issues</a></td>
-                </tr>
-<!--
+                </tr><!--
                 <tr>
                   <td>Release 1.35.0</td>
 
@@ -155,10 +154,9 @@ http://www.boost.org/development/website_updating.html
 
               <h2><a name="Snapshots" id="Snapshots"></a>Snapshots</h2>
 
-              <p>Snapshots are used for
-              quality control checks.&nbsp; The Unix tarballs and Windows zipballs are
-              identical except for the line endings exported from
-              Subversion.</p>
+              <p>Snapshots are used for quality control checks.&nbsp; The
+              Unix tarballs and Windows zipballs are identical except for the
+              line endings exported from Subversion.</p>
 
               <p>Because the snapshots represent work-in-process, they may
               not be suitable for production use.</p>
@@ -223,57 +221,10 @@ http://www.boost.org/development/website_updating.html
               features, and even whole new libraries. It may be unstable,
               however.</p>
 
-              <h2><a name="Acknowledgements" id=
-              "Acknowledgements"></a>Acknowledgements</h2>
-
-              <p>The compiler status tables have been prepared with resources
-              donated by a number of individuals, educational institutions,
-              and companies. Boost would like to thank them for their
-              support. Some of the organizations helping include:</p>
-
-              <ul class="directory">
-                <li>
-                  <p><img src="../gfx/borland_logo.gif" alt="Borland" width=
-                  "70" height="33" /><br />
-                  <a href="http://www.borland.com/">Borland</a></p>
-                </li>
-
-                <li>
-                  <p><img src="../gfx/intel_logo.gif" alt="intel" width="72"
-                  height="36" /><br />
-                  <a href="http://www.intel.com/software/products">Intel
-                  Corporation</a></p>
-                </li>
-
-                <li>
-                  <p><img src="../gfx/ms_logo.gif" alt="Microsoft" width=
-                  "113" height="35" /><br />
-                  <a href=
-                  "http://msdn.microsoft.com/visualc/">Microsoft</a></p>
-                </li>
-
-                <li>
-                  <p><a href="http://www.hp.com/">Hewlett-Packard
-                  Company</a></p>
-                </li>
-
-                <li>
-                  <p><a href="http://www.lbl.gov">Lawrence Berkeley National
-                  Laboratory</a></p>
-                </li>
-
-                <li>
-                  <p><a href="http://www.osl.iu.edu/">Open Systems
-                  Laboratory, Indiana University</a></p>
-                </li>
-              </ul>
-
-              <div class="clear"></div>
-
-              <p>Note, however, that Boost does not endorse any product or
-              service, nor does Boost guarantee that some or all of its
-              libraries work with any of the products or services mentioned
-              above.</p>
+              <p>A list of some of the organizations helping with testing is
+              listed on the <a href=
+              "/community/acknowledgements.html#testing">Acknowledgements
+              page</a>.</p>
             </div>
           </div>
         </div>
