Endian Results now pending.
[SVN r74391]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -269,7 +269,7 @@ http://www.boost.org/development/website_updating.html
 		    <td>
         	      <a href=
 		     "http://lists.boost.org/boost-announce/2011/09/0332.php">
-			Ongoing</a>
+			Pending</a>
 		    </td>
                   </tr>
 
