Algorithm Library Review starts.
[SVN r74535]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -186,19 +186,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <td>Algorithm</td>
-
-                    <td>Marshall Clow</td>
-
-                    <td>
-		      <a href="http://www.boostpro.com/vault/index.php?action=downloadfile&amp;filename=Boost.Algorithm-009.zip&amp;directory=Algorithms">Boost Sandbox</a></td>
-
-                    <td>Dave Abrahams</td>
-
-                    <td>September 22, 2011 - October 1, 2011</td>
-                  </tr>
-
-                  <tr>
                     <td>Local</td>
 
                     <td>Lorenzo Caminiti</td>
@@ -256,6 +243,23 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <td>Algorithm</td>
+
+                    <td>Marshall Clow</td>
+
+                    <td>Dave Abrahams</td>
+
+                    <td>September 22, 2011 - October 1, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/09/0333.php">
+			Ongoing</a>
+		    </td>
+                  </tr>
+
 
                   <tr>
                     <td>Endian</td>
