Autobuffer has been removed from the schedule until it is ready for review.
[SVN r74929]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -108,6 +108,7 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+<!-- On hold until the library is ready.
                   <tr>
                     <td>AutoBuffer</td>
 
@@ -121,7 +122,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>-</td>
                   </tr>
-
+-->
                   <tr>
                     <td>Quaternions, Vectors, Matrices (QVM)</td>
 
