Website: Merge live into beta.
[SVN r74993]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -95,34 +95,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <td>Endian</td>
-
-                    <td>Beman Dawes</td>
-
-                    <td>
-		      <a href="http://svn.boost.org/svn/boost/sandbox/endian/">
-			Boost Sandbox</a>
-		    </td>
-                    <td>Joel Falcou</td>
-
-                    <td>September 5, 2011 - September 14, 2011</td>
-                  </tr>
-
-                  <tr>
-                    <td>Conversion</td>
-
-                    <td>Vicente Botet</td>
-
-                    <td><a href=
-                    "http://svn.boost.org/svn/boost/sandbox/conversion/">
-		    Boost Sandbox</a></td>
-
-                    <td>Gordon Woodhull</td>
-
-                    <td>August 20, 2011 - August 29, 2011</td>
-                  </tr>
-
-                  <tr>
                     <td>Sorting</td>
 
                     <td>Steven Ross</td>
@@ -136,6 +108,7 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+<!-- On hold until the library is ready.
                   <tr>
                     <td>AutoBuffer</td>
 
@@ -149,44 +122,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>-</td>
                   </tr>
-
-                  <tr>
-                    <td>Containers</td>
-
-                    <td>Ion Gazta&ntilde;aga</td>
-
-                    <td>
-                      <ul>
-                        <li><a href=
-                        "http://svn.boost.org/svn/boost/sandbox/move/libs/container/doc/html/index.html">Documentation</a></li>
-
-                        <li><a href=
-                        "http://www.boostpro.com/vault/index.php?action=downloadfile&amp;filename=boost.move.container.zip&amp;directory=Containers&amp;">
-                        Source</a></li>
-                      </ul>
-		    </td>
-
-                    <td>John Maddock</td>
-
-                    <td>August 3, 2011 - August 12, 2011</td>
-                  </tr>
-
-                  <tr>
-                    <td>Lockfree</td>
-
-                    <td>Tim Blechmann</td>
-
-                    <td>
-		      <ul>
-			<li><a href="http://tim.klingt.org/boost_lockfree">Documentation</a></li>
-			<li><a href="http://tim.klingt.org/git?p=boost_lockfree.git;a=snapshot;h=HEAD;sf=tgz">Source</a></li>
-</td>
-
-                    <td>Hartmut Kaiser</td>
-
-                    <td>July 18, 2011 - July 27, 2011</td>
-                  </tr>
-
+-->
                   <tr>
                     <td>Quaternions, Vectors, Matrices (QVM)</td>
 
@@ -251,19 +187,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <td>Algorithm</td>
-
-                    <td>Marshall Clow</td>
-
-                    <td>
-		      <a href="http://www.boostpro.com/vault/index.php?action=downloadfile&amp;filename=Boost.Algorithm-009.zip&amp;directory=Algorithms">Boost Sandbox</a></td>
-
-                    <td>Dave Abrahams</td>
-
-                    <td>September 22, 2011 - October 1, 2011</td>
-                  </tr>
-
-                  <tr>
                     <td>Local</td>
 
                     <td>Lorenzo Caminiti</td>
@@ -273,26 +196,33 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Jeffrey Hellrung</td>
 
+                    <td>October 24, 2011 - November 2, 2011</td>
+                  </tr>
+
+                  <tr>
+                    <td>Singularity</td>
+
+                    <td>Ben Robinson</td>
+
+                    <td>
+		      <a href="https://github.com/icaretaker/Singularity">GitHub</a></td>
+
+                    <td>Needed</td>
+
                     <td>-</td>
                   </tr>
 
                   <tr>
-                    <td>Context</td>
+                    <td>Atomic</td>
 
-                    <td>Oliver Kowalke</td>
+                    <td>Helge Bahmann</td>
 
-		    <td>
-		      <ul>
-			<li><a href="http://ok73.ok.funpic.de/boost/libs/context/doc/html/">Documentation</a></li>
-			
-			<li><a href="http://www.boostpro.com/vault/index.php?action=downloadfile&amp;filename=boost.context-0.7.3.zip&amp;directory=Concurrent%20Programming">Source</a></li>
-		      </ul>
-		    </td>
+                    <td>Forthcoming
+		      <a href=""></a></td>
 
-                    <td>Giovanni Deretta</td>
+                    <td>Tim Blechmann</td>
 
-                    <td>July 28, 2011 - August 2, 2011</td>
-
+                    <td>October 17, 2011 - October 26, 2011</td>
                   </tr>
 
 		</tbody>
@@ -316,6 +246,88 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                   <tr>
+                    <td>Algorithm</td>
+
+                    <td>Marshall Clow</td>
+
+                    <td>Dave Abrahams</td>
+
+                    <td>September 22, 2011 - October 1, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/09/0333.php">
+			Ongoing</a>
+		    </td>
+                  </tr>
+
+
+                  <tr>
+                    <td>Endian</td>
+
+                    <td>Beman Dawes</td>
+
+                    <td>Joel Falcou</td>
+
+                    <td>September 5, 2011 - September 14, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/09/0332.php">
+			Pending</a>
+		    </td>
+                  </tr>
+
+                  <tr>
+                    <td>Conversion</td>
+
+                    <td>Vicente Botet</td>
+
+                    <td>Gordon Woodhull</td>
+
+                    <td>August 20, 2011 - August 29, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/08/0330.php">
+			Pending</a>
+		    </td>
+                  </tr>
+
+                  <tr>
+                    <td>Containers</td>
+
+                    <td>Ion Gazta&ntilde;aga</td>
+
+                    <td>John Maddock</td>
+
+                    <td>August 3, 2011 - August 12, 2011</td>
+
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/08/0329.php">
+			Pending</a>
+		    </td>
+                  </tr>
+
+                  <tr>
+                    <td>Lockfree</td>
+
+                    <td>Tim Blechmann</td>
+
+                    <td>Hartmut Kaiser</td>
+
+                    <td>July 18, 2011 - July 27, 2011</td>
+
+		    <td><a href=
+                    "http://lists.boost.org/boost-announce/2011/07/0324.php">
+			<del>Pending</del></a><br/>
+		      <a href=
+                    "http://lists.boost.org/boost-announce/2011/08/0331.php">
+			Accepted</a></td>
+                  </tr>
+
+                  <tr>
                     <td>Boost 1.47.0 Released</td>
 
                     <td></td>
@@ -337,9 +349,16 @@ http://www.boost.org/development/website_updating.html
 
                     <td>July 1, 2011 - July 10, 2011</td>
 
-		    <td><a href=
+		    <td><del><a href=
                     "http://lists.boost.org/boost-announce/2011/06/0320.php">
-			Ongoing</a></td>
+			Ongoing</a></del><br/>
+        	      <del><a href=
+		     "http://lists.boost.org/boost-announce/2011/07/0322.php">
+			Pending</a></del><br/>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/08/0328.php">
+			Accepted</a>
+		    </td>
                   </tr>
 
 
@@ -556,7 +575,7 @@ http://www.boost.org/development/website_updating.html
 
 		    <td><a href=
 		    "http://lists.boost.org/boost-announce/2011/03/0291.php">
-			Accepted</a></td>
+			Accepted -- Added in 1.47.0</a></td>
                   </tr>
 
                   <tr>
@@ -612,7 +631,7 @@ http://www.boost.org/development/website_updating.html
 
 		    <td><a href=
 		      "http://lists.boost.org/boost-announce/2011/01/0280.php">
-		      Accepted -- Added to SVN</a></td>
+		      Accepted -- Added in 1.47.0</a></td>
                   </tr>
 
                   <tr>
@@ -626,7 +645,7 @@ http://www.boost.org/development/website_updating.html
 
 		    <td><a href=
 		      "http://lists.boost.org/boost-announce/2010/10/0270.php">
-		      Accepted -- Added to SVN</a></td>
+		      Accepted -- Added in 1.47.0</a></td>
 		  </tr>
 		  
                   <tr>
@@ -794,7 +813,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td><a href=
                     "http://lists.boost.org/boost-announce/2009/11/0245.php">
-			Accepted -- Added to SVN</a></td>
+			Accepted -- Added in 1.47</a></td>
                   </tr>
 
                   <tr>
