--- a/common/menu-community.html
+++ b/common/menu-community.html
@@ -36,6 +36,9 @@
       </ul>
     </li>
 
+    <li><a href="/community/acknowledgements.html">Acknowledgements <span class=
+    "link">&gt;</span></a></li>
+
     <li><a href="/community/groups.html">Mailing Lists <span class=
     "link">&gt;</span></a></li>
 
@@ -57,9 +60,6 @@
 
     <li><a href="/community/sandbox.html">Sandbox <span class=
     "link">&gt;</span></a></li>
-
-    <li><a href="http://www.boost-consulting.com/vault/" class=
-    "external">Vault <span class="link">&gt;</span></a></li>
 
     <li>
       <a href="/community/irc.html">IRC <span class="link">&gt;</span></a>
