--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -324,7 +324,7 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --merge-divs no --merge-spans no --d
                 <li>Create a new file in the <tt>/feed/news</tt> directory,
                 say <tt>/feed/news/gui_review_ends.qbk</tt>.</li>
 
-                <li>In a shell, go to the <tt>/site-tools/update.py</tt>.
+                <li>In a shell, run the <tt>/site-tools/update.py</tt> script.
                 This will generate the page for the new news item, regenerate
                 the <tt>/feed/news.rss</tt> file to include it, update pages
                 which link to the new item and update the file
