--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -212,18 +212,6 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
-                  <tr>
-                    <td>Atomic</td>
-
-                    <td>Helge Bahmann</td>
-
-                    <td>Forthcoming
-		      <a href=""></a></td>
-
-                    <td>Tim Blechmann</td>
-
-                    <td>October 17, 2011 - October 26, 2011</td>
-                  </tr>
 
 		</tbody>
               </table>
@@ -246,6 +234,21 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                   <tr>
+                    <td>Atomic</td>
+
+                    <td>Helge Bahmann</td>
+
+                    <td>Tim Blechmann</td>
+
+                    <td>October 17, 2011 - October 26, 2011</td>
+		    <td>
+        	      <a href=
+		     "http://lists.boost.org/boost-announce/2011/10/0334.php">
+			Ongoing</a>
+		    </td>
+                  </tr>
+
+                  <tr>
                     <td>Algorithm</td>
 
                     <td>Marshall Clow</td>
@@ -257,7 +260,7 @@ http://www.boost.org/development/website_updating.html
 		    <td>
         	      <a href=
 		     "http://lists.boost.org/boost-announce/2011/09/0333.php">
-			Ongoing</a>
+			Pending</a>
 		    </td>
                   </tr>
 
