Website: Some release notes for 1.48
[SVN r75096]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -78,7 +78,77 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/libs/numeric/conversion/index.html">Numeric.Conversion</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added numeric_cast_traits; see '<a href="/doc/libs/1_48_0/libs/numeric/conversion/doc/html/boost_numericconversion/type_requirements_and_user_defined_types_support.html#boost_numericconversion.type_requirements_and_user_defined_types_support.udts_with_numeric_cast">numeric_cast_traits</a>'
+                for details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/spirit/index.html">Spirit</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Spirit V2.5.1, see the '<a href="/doc/libs/1_48_0/libs/spirit/doc/html/spirit/what_s_new/spirit_2_5_1.html">What's
+                New</a>' section for details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/type_traits/">TypeTraits</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Extension to support <a href="/libs/type_traits/doc/html/boost_typetraits/category/value_traits/operators.html">operator
+                detection</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/unordered/">Unordered</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Improved support for the C++11 standard - breaking change to equality
+                and emplace.
+              </div>
+            </li>
+            <li>
+              <div>
+                Use Boost.Move to implement move semantics.
+              </div>
+            </li>
+            <li>
+              <div>
+                See the <a href="/doc/html/unordered/changes.html#unordered.changes.boost_1_48_0___major_update">change
+                log</a> for full details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/wave/index.html">Wave</a>:</span>
+          <ul>
+            <li>
+              <div>
+                See the <a href="/libs/wave/ChangeLog">Changelog</a> for details.
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
