Website: Chrono release notes.
[SVN r75099]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -78,6 +78,55 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/libs/chrono/index.html">Chrono</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/5979">#5979</a>
+                Added chrono rounding utilities as defined by Howard Hinnant <a href="http://home.roadrunner.com/~hinnant/duration_io/chrono_util.html">here</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/5978">#5978</a>
+                Add BOOST_CHRONO_HAS_PROCESS_CLOCKS to know if process clocks are
+                available.
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/5998">#5998</a>
+                Make possible to disable hybrid error handling.
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/5906">#5906</a>
+                Take in account the constexpr as defined in the standard.
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/5907">#5907</a>
+                Take in account noexcept for compilers supporting it.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed some bugs.
+              </div>
+            </li>
+            <li>
+              <div>
+                See the <a href="/libs/chrono/appendices/history.html">History</a>
+                for more details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/numeric/conversion/index.html">Numeric.Conversion</a>:</span>
           <ul>
             <li>
