Website: Release notes for lexical cast.
[SVN r75102]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -127,6 +127,34 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added code to work with Inf and NaN values on any platform (<a href="https://svn.boost.org/trac/boost/ticket/5689">#5689</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                New Quickbook documentation (<a href="https://svn.boost.org/trac/boost/ticket/5723">#5723</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Better performance and less memory usage for many combinations of
+                Source and Target types.
+              </div>
+            </li>
+            <li>
+              <div>
+                Better performance for C locale.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/numeric/conversion/index.html">Numeric.Conversion</a>:</span>
           <ul>
             <li>
