Website: Release notes for maths.
[SVN r75103]

--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -155,6 +155,26 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/math/index.html">Math</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added new series evaluation methods to the cyclic Bessel I, J, K
+                and Y functions. Also taken great care to avoid spurious over and
+                underflow of these functions. Fixes issue <a href="https://svn.boost.org/trac/boost/ticket/5560">#5560</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added an example of using Inverse Chi-Squared distribution for Bayesian
+                statistics, provided by Thomas Mang.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/numeric/conversion/index.html">Numeric.Conversion</a>:</span>
           <ul>
             <li>
