--- a/users/history/version_1_48_0.html
+++ b/users/history/version_1_48_0.html
@@ -170,6 +170,63 @@
                 statistics, provided by Thomas Mang.
               </div>
             </li>
+            <li>
+              <div>
+                Added tests to use improved version of lexical_cast which handles
+                C99 nonfinites without using globale facets.
+              </div>
+            </li>
+            <li>
+              <div>
+                Corrected wrong out-of-bound uniform distribution CDF complement
+                values <a href="https://svn.boost.org/trac/boost/ticket/5733">#5733</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Enabled long double support on OpenBSD (issue <a href="https://svn.boost.org/trac/boost/ticket/6014">#6014</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Changed nextafter and related functions to behave in the same way
+                as other implementations - so that nextafter(+INF, 0) is a finite
+                value (issue <a href="https://svn.boost.org/trac/boost/ticket/5832">#5832</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Changed tuple include configuration to fix issue when using in conjunction
+                with Boost.Tr1 (issue <a href="https://svn.boost.org/trac/boost/ticket/5934">#5934</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Changed class eps_tolerance to behave correctly when both ends of
+                the range are zero (issue <a href="https://svn.boost.org/trac/boost/ticket/6001">#6001</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed missing include guards on prime.hpp (issue <a href="https://svn.boost.org/trac/boost/ticket/5927">#5927</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Removed unused/undocumented constants from constants.hpp (issue
+                <a href="https://svn.boost.org/trac/boost/ticket/5982">#5982</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed missing std:: prefix in nonfinite_num_facets.hpp (issue <a href="https://svn.boost.org/trac/boost/ticket/5914">#5914</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Minor patches for Cray compiler compatibility.
+              </div>
+            </li>
           </ul>
         </div>
       </li>
@@ -181,6 +238,21 @@
               <div>
                 Added numeric_cast_traits; see '<a href="/doc/libs/1_48_0/libs/numeric/conversion/doc/html/boost_numericconversion/type_requirements_and_user_defined_types_support.html#boost_numericconversion.type_requirements_and_user_defined_types_support.udts_with_numeric_cast">numeric_cast_traits</a>'
                 for details.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/regex/">Regex</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed issues: <a href="https://svn.boost.org/trac/boost/ticket/698">#698</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5835">#5835</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5958">#5958</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/5736">#5736</a>.
               </div>
             </li>
           </ul>
